# AIocr

./: .gitignore  README.md  app_macos.spec  entitlements.plist  pyproject.toml  requirements.txt  run_gui.sh  setup.py
configs/: app.yaml  train_donut.yaml
docs/: macOS_PACKAGING.md
resources/: README.md
scripts/: bootstrap_mac.sh  build_macos.sh  export_trocr_onnx.py
src/cache/: store.py
src/connectors/: docai_client.py
src/data/: block_types.py  ocr_result.py
src/engines/: donut_engine.py  pix2tex_math.py  tatr_tables.py  trocr_onnx.py
src/eval/: bench.py
src/gui/: desktop_app.py  widgets.py  workers.py
src/models/: __init__.py  base_model.py  docai.py  donut.py  pix2tex.py  tatr.py  trocr.py
src/pdf/: text_layer.py
src/postproc/: exporters.py  layout_merge.py  spell_checker.py  text_norm.py
src/preproc/: pdf_loader.py  vision_filters.py
src/router/: heuristics.py
src/train/: __init__.py  donut_lora.py  export_trocr_onnx.py  synthdog_loader.py
src/util/: config.py  coords.py  device.py  logging.py  timing.py
src/utils/: layout_merge.py
tests/: test_coords.py  test_textlayer.py
